@@ -1,3 +1,9 @@
+2005-03-23  Mike Stump  <mrs@apple.com>
+
+	* darwin_stop_world.c: Update for -m64 multilib.
+	* include/private/gcconfig.h: Likewise.
+	* powerpc_darwin_mach_dep.s: Likewise.
+
 2005-03-01  Kelley Cook  <kcook@gcc.gnu.org>
 
 	* Makefile.in, include/Makefile.in: Regenerate.
